--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -95,6 +95,16 @@ jobs:
           cache-to: type=gha,mode=max
           platforms: linux/amd64
       
+      - name: Copy docker-compose to server
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.SERVER_PORT }}
+          source: "docker-compose.yml"
+          target: "/home/${{ secrets.SERVER_USER }}"
+
       - name: Deploy to server
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -106,19 +116,11 @@ jobs:
             # Pull latest image
             docker pull ${{ secrets.DOCKER_USERNAME }}/ticketing:latest
             
-            # Stop existing container
-            docker stop ticketing-app || true
-            docker rm ticketing-app || true
+            # Stop existing services
+            docker-compose down || true
             
-            # Start new container
-            docker run -d \
-              --name ticketing-app \
-              --restart unless-stopped \
-              -p 3000:3000 \
-              -e DB_HOST=${{ secrets.DB_HOST }} \
-              -e DB_USER=${{ secrets.DB_USER }} \
-              -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
-              -e DB_NAME=${{ secrets.DB_NAME }} \
-              -e ADMIN_USER=${{ secrets.ADMIN_USER }} \
-              -e ADMIN_PASSWORD=${{ secrets.ADMIN_PASSWORD }} \
-              ${{ secrets.DOCKER_USERNAME }}/ticketing:latest 
+            # Update docker-compose.yml with the new image
+            sed -i "s|image: .*|image: ${{ secrets.DOCKER_USERNAME }}/ticketing:latest|" docker-compose.yml
+            
+            # Start services with docker-compose
+            ADMIN_USER=${{ secrets.ADMIN_USER }} ADMIN_PASSWORD=${{ secrets.ADMIN_PASSWORD }} docker-compose up -d 
