--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -117,10 +117,10 @@ jobs:
             docker pull ${{ secrets.DOCKER_USERNAME }}/ticketing:latest
             
             # Stop existing services
-            docker-compose down || true
+            docker compose down || true
             
             # Update docker-compose.yml with the new image
             sed -i "s|image: .*|image: ${{ secrets.DOCKER_USERNAME }}/ticketing:latest|" docker-compose.yml
             
-            # Start services with docker-compose
-            ADMIN_USER=${{ secrets.ADMIN_USER }} ADMIN_PASSWORD=${{ secrets.ADMIN_PASSWORD }} docker-compose up -d 
+            # Start services with docker compose
+            ADMIN_USER=${{ secrets.ADMIN_USER }} ADMIN_PASSWORD=${{ secrets.ADMIN_PASSWORD }} docker compose up -d 
