--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -116,8 +116,13 @@ jobs:
             # Pull latest image
             docker pull ${{ secrets.DOCKER_USERNAME }}/ticketing:latest
             
-            # Stop existing services
+            # Stop existing services and clean up
             docker compose down || true
+            docker stop ticketing-app || true
+            docker rm ticketing-app || true
+            
+            # Kill any process using port 3000
+            sudo fuser -k 3000/tcp || true
             
             # Update docker-compose.yml with the new image
             sed -i "s|image: .*|image: ${{ secrets.DOCKER_USERNAME }}/ticketing:latest|" docker-compose.yml
