Fix: Improve docker-compose configuration with health checks and proper dependencies

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,10 @@ services:
       - ADMIN_PASSWORD=${ADMIN_PASSWORD:-pass}
       - PORT=3000
     depends_on:
-      - mariadb
-      - seed
+      mariadb:
+        condition: service_healthy
+      seed:
+        condition: service_completed_successfully
     restart: unless-stopped
 
   seed:
@@ -24,8 +26,9 @@ services:
       - DB_PASSWORD=pass
       - DB_NAME=ticketing
     depends_on:
-      - mariadb
-    command: node fixtures/seed.js
+      mariadb:
+        condition: service_healthy
+    command: sh -c "sleep 10 && node fixtures/seed.js"
     restart: "no"
 
   mariadb:
@@ -38,6 +41,10 @@ services:
     volumes:
       - mariadb_data:/var/lib/mysql
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      timeout: 20s
+      retries: 10
 
 volumes:
   mariadb_data: 
