--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   app:
-    image: PLACEHOLDER_IMAGE
+    build: .
     ports:
       - "3000:3000"
     environment:
@@ -17,7 +17,7 @@ services:
     restart: unless-stopped
 
   seed:
-    image: PLACEHOLDER_IMAGE
+    build: .
     environment:
       - DB_HOST=mariadb
       - DB_USER=root
@@ -34,7 +34,7 @@ services:
       - MYSQL_ROOT_PASSWORD=pass
       - MYSQL_DATABASE=ticketing
     ports:
-      - "3306:3306"
+      - "3307:3306"
     volumes:
       - mariadb_data:/var/lib/mysql
     restart: unless-stopped
