--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -115,15 +115,13 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SERVER_PORT }}
           script: |
-            echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
-            # Pull specific version image
+            # Pull image with commit SHA
             docker pull ${{ secrets.DOCKER_USERNAME }}/ticketing:${{ github.sha }}
             
             # Stop existing containers
             docker compose -f docker-compose.prod.yml down || true
             
-            # Deploy using production compose file with specific version
+            # Deploy using production compose file with commit SHA
             DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }} \
             IMAGE_TAG=${{ github.sha }} \
             DB_PASSWORD=pass \
